# r4a8h08

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  requirements.txt  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  zizmor.yml
CHANGELOG/: 0.1.0.md
docs/: api.md  index.md  installation.md  usage.md
src/: r4a8h08.py  serialmessage.py
src/r4a8h08/: __init__.py  cli.py
tests/: test_r4a8h08.py
